# pybind11_example

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp  my_module.cpp  my_struct.h  setup.py
